# livros-para-md

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: tests.yml
scripts/: setup-macos.sh  setup-windows.ps1
src/livros_md/: __init__.py  cli.py  local.py  mistral_ocr.py
tests/: test_core.py
