[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "livros-para-md"
version = "0.1.0"
description = "Converte livros e documentos para Markdown localmente ou com Mistral OCR."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Francisco Razzo" }]
keywords = ["markdown", "ocr", "pdf", "markitdown", "mistral"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "markitdown[docx,pdf,pptx,xlsx]==0.1.6",
  "mistralai==2.6.0",
  "pypdf==6.9.1",
]

[project.scripts]
livros-md = "livros_md.cli:main"

[project.urls]
Homepage = "https://github.com/franciscorazzo/livros-para-md"
Documentation = "https://github.com/franciscorazzo/livros-para-md#readme"
Issues = "https://github.com/franciscorazzo/livros-para-md/issues"
Changelog = "https://github.com/franciscorazzo/livros-para-md/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
